--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -69,6 +69,7 @@
     font-weight: 600;
     color: rgb(255, 255, 255);
     cursor: pointer;
+    margin-top: 20px;
 }
 .log_content button:hover{
     background-color: rgb(59, 177, 100);
@@ -112,8 +113,53 @@
 .forgot-password:hover{
     text-decoration: underline;   
 }
+.check {
+    position: relative;
+    width: 300px;
+    margin: 20px auto;
+    height: 100px;
+  }
+  
+  .check input {
+    position: absolute;
+    width: 90%;
+    padding: 10px;
+    background: transparent;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    transition: 0.3s ease;
+    outline: none;
+    z-index: 1;
 
-
+  }
+  
+  .check input:focus,
+  .check input:valid {
+    border-color: rgb(168, 168, 168);
+  }
+  
+  .labels1{
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    color: rgb(168, 168, 168);
+    padding: 0 10px;
+    font-size: 16px;
+    transition: 0.3s ease;
+    transform: translateY(45%);
+    z-index: 999;
+  }
+  
+  .check input:focus + .labels1{
+    top: -10px;
+    font-size: 12px;
+    color: red;
+    transform: translateY(3px) scale(0.9);
+    margin: 0 10px;
+    z-index: 9999;
+    background-color: white;
+  }
+  
 
 @media only screen and (max-width: 768px) {
     .login_left{
