--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -167,16 +167,21 @@
         height: 250px;
         display: flex;
         flex-direction: column;
-        gap: 20px;
     }
     .labels{
         top: 20%;
     }
     .log_content button{
-        width: 95%;
+        width: 100%;
     }
     .ch1{
+        width: 100%;
+        padding: 8px 0;
+    }  
+    .ch{
         padding: 8px 0;
     }
-    
+    .check{
+        margin: 15px auto;
+    }
 }
