--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -42,7 +42,7 @@
     gap: 20px;
 }
 .header{
-    width: 60%;
+    width: 100%;
     height: 60px;
     display: flex;
     justify-content: center;
@@ -50,8 +50,7 @@
     margin-bottom: 20px;
 }
 .header img{
-    width: 55%;
-    height: 80px;
+    height: 50px;
     align-items: center;
 }
 
@@ -80,6 +79,8 @@
     color: rgb(101, 177, 127);
 }
 .forgot-password{
+    font-size: 14px;
+    margin: 5px auto;
     cursor: pointer;
 }
 .forgot-password a{
@@ -91,17 +92,16 @@
 }
 .log_content{
     width: 60%;
-    height: 200px;
     display: flex;
     flex-direction: column;
 }
 .check {
     position: relative;
     width: 100%;
+    display: flex;
     height: auto;
-    margin: 20px auto;
+    margin: 14px auto;
   }
-
 .labels{
     position: absolute;
     top: 25%;
@@ -111,25 +111,45 @@
     transform: translate(-10px);
     pointer-events: none;
     transition: .5s;
-    font-size: 17px;
+    font-size: 14px;
 }
+.label123{
+    position: absolute;
+    top: 25%;
+    left: 18px;
+    color: red;
+    padding: 0 5px;
+    transform: translate(-10px);
+    pointer-events: none;
+    transition: .5s;
+    font-size: 14px;
+}
+
 .ch1{
-    left: 20%;
-    font-size: 20px;
+    left: 0%;
+    width: 100%;
+    font-size: 14px;
     color: #000000;
-    padding: 8px 20px;
+    padding: 8px 27px;
     background-color: transparent;
-    border: 2px solid gray;
+    border: 1px solid rgb(199, 197, 197);
     outline: none;
     border-radius: 4px;
 }
+.ch1:hover{
+    border: 1px solid rgb(0, 0, 0);
+}
+.ch:hover{
+    border: 1px solid rgb(0, 0, 0);
+}
 .ch{
-    left: 20%;
-    font-size: 20px;
+    left: 0%;
+    font-size: 19px;
+    width: 100%;
     color: #000000;
     padding: 8px 20px;
     background-color: transparent;
-    border: 2px solid gray;
+    border: 1px solid red;
     outline: none;
     border-radius: 4px;
 }
@@ -138,19 +158,35 @@
     top: -17%;
     left: 8%;
     font-size: 14px;
-    color: red;
-    background-color: #ffffff;
+    color: green;
+    background-color: white;
 }
 .check .ch1:focus ~ .labels,
 .check .ch1:valid ~ .labels {
     top: -17%;
     left: 8%;
     font-size: 14px;
-    color: red;
+    color: green;
     background-color: #ffffff;
 }
   
-
+.check .ch:focus ~ .label123,
+.check .ch:valid ~ .label123 {
+    top: -17%;
+    left: 8%;
+    font-size: 14px;
+    color: green;
+    background-color: white;
+}
+.check .ch1:focus ~ .label123,
+.check .ch1:valid ~ .label123 {
+    top: -17%;
+    left: 8%;
+    font-size: 14px;
+    color: green;
+    background-color: #ffffff;
+}
+  
 @media only screen and (max-width: 768px) {
     .login_left{
         display: none;
@@ -176,12 +212,17 @@
     }
     .ch1{
         width: 100%;
-        padding: 8px 0;
+        font-size: 15px;
+        padding: 8px 10px;
     }  
     .ch{
-        padding: 8px 0;
+        font-size: 15px;
+        padding: 8px 10px;
     }
     .check{
         margin: 15px auto;
+    }
+    .forgot-password{
+        font-size: 10px;
     }
 }
