--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -126,7 +126,6 @@
 }
 
 .ch1{
-    left: 0%;
     width: 100%;
     font-size: 14px;
     color: #000000;
@@ -143,7 +142,6 @@
     border: 1px solid rgb(0, 0, 0);
 }
 .ch{
-    left: 0%;
     font-size: 19px;
     width: 100%;
     color: #000000;
@@ -210,6 +208,9 @@
     .log_content button{
         width: 100%;
     }
+    .log_content p{
+        font-size: 11px;
+    }
     .ch1{
         width: 100%;
         font-size: 14px;
@@ -224,5 +225,11 @@
     }
     .forgot-password{
         font-size: 10px;
+    }
+    .labels{
+        top: 34%;
+    }
+    .header{
+        margin: 0;
     }
 }
